[Edit]add some style to logOut link

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon2.ico">
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <title>one-sign</title>
+  <link rel="shortcut icon" type="image/ico" href="/img/icons/favicon.ico"/>
+    <title>ONE-SIGN</title>
   </head>
   <body>
     <noscript>
