[Edit]edit some responsive for mobile and desktop

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link rel="shortcut icon" type="image/ico" href="/img/icons/favicon.ico"/>
-    <title>ONE-SIGN</title>
+    <title>ONE SIGN</title>
   </head>
   <body>
     <noscript>
